# satoshiguesser

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js  wrangler.jsonc
data/: wallets.csv
rust-bruteforcer/: Cargo.toml
rust-bruteforcer/src/: main.rs
scripts/: bench-spin.js  build-wallet-set.js  fetch-patoshi.js
src/: main.js
src/audio/: audio.js
src/game/: bloom.js  crypto.js  spin.js  wallet-table.js  wallets.js  worker.js
src/styles/: main.css  slot.css
src/ui/: log.js  slot-classic.js  slot-realistic.js  win-dialog.js
tests/: crypto.test.js  spin.test.js  wallets.test.js
