[package]
name = "satoshi-guesser"
version = "0.1.0"
edition = "2021"

[dependencies]
# Elliptic Curve Cryptography
secp256k1 = { version = "0.28.0", features = ["rand", "global-context"] }

# Hashing
sha2 = "0.10.8"
ripemd = "0.1.3"

# Concurrency and Randomness
rayon = "1.8.1"
rand = "0.8.5"
hex = "0.4.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
